third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/inline-parity/lambda.exp

Diagnostics:
error: captured variable `product` cannot be modified inside of a lambda
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/lambda.move:30:18
   │
30 │     foreach(&v, |e| product = LambdaTest1::inline_mul(product, *e));
   │                     ^^^^^^^
